--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Parte esquerda da página de login -->
         <div class="left-login">
             <h1> Faça o cadastro<br> e entre para o nosso time</h1>
-            <img class="img-login" src="../Imagem/programador.svg" alt="Programador">
+            <img class="img-login" src="./img/programador.svg" alt="Programador">
         </div>
 
 
